--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1 class="titulo"><span>S</span>tar<span>C</span>raft</h1>
     </header>
+    <h1>Unidades</h1>
 <div class="contenedor">
     <div class="item"><h2 class="unidad">sonda</h2><img src="media/1.jpeg" alt=""></div>
     <div class="item"><h2 class="unidad">zealot</h2><img src="media/2.jpeg" alt=""></div>
